# humblSKILLS

./: .gitignore  .gitmodules  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  mkdocs.yml  registry.json  release-please-config.json
.github/workflows/: auto-merge-release-please.yml  ci.yml  docs.yml  registry.yml  release-auto-merge.yml  release-please.yml  release.yml
cli/: go.mod  go.sum
docs/: index.md  mkdocs_hooks.py  requirements.txt  roadmap.md
docs/eval/: artifacts.md  index.md  indie-launch-analysis.md  quickstart.md  scenarios.md
docs/getting_started/: index.md  installation.md  quickstart.md
docs/using_humblskills/: preserving_user_content.md  registry_and_format.md  sharing_skillsets.md
scripts/: install.sh
skill-optimization/: .env.example  .gitignore  README.md  pyproject.toml
skill-optimization/docs/: skillopt-integration.md
skill-optimization/skillopt_lab/: README.md  __init__.py  offline_demo.py  train.py
skill-optimization/skillopt_lab/configs/: exactmatch.yaml
skill-optimization/skillopt_lab/data/exactmatch/: raw.jsonl
skill-optimization/skillopt_lab/envs/: __init__.py
skill-optimization/skillopt_lab/envs/exactmatch/: __init__.py  adapter.py  evaluator.py  loader.py  rollout.py
skill-optimization/skillopt_lab/envs/exactmatch/skills/: initial.md
skill-optimization/skillopt_lab/tests/: test_wiring.py
skills/analyze-ml-system-design/: SKILL.md
skills/analyze-system-design/: SKILL.md
skills/create-scroll-animation/: SKILL.md
skills/create-video-transition/: SKILL.md
skills/smart-claude-init/: SKILL.md
(+664 files in other folders)
